[package]
name = "rustOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# set panic to abort to prevent stack unwinding and our language item "eh_personality" error
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
