[package]
name = "rustOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Using some older versions here because they make fewer problems with our project
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
log = "0.4.21"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# set panic to abort to prevent stack unwinding and our language item "eh_personality" error
#[profile.dev]
#build-std = ["unstable"]
#panic = "abort"

#[profile.release]
#build-std = ["unstable"]
#panic = "abort"

#->moved to OStt json