[package]
name = "rustOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Using some older versions here because they make fewer problems with our project
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
log = "0.4.21"
x86_64 = "0.14.2"
# infrastructure for serial ports
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# command appendex for qemu specifics (exit on test mode)
[package.metadata.bootimage]
# test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
# mapping specified exit code to 0 for cargo tests to no view successful qemu exit as fail
test-success-exit-code = 33         # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false

# set panic to abort to prevent stack unwinding and our language item "eh_personality" error
#[profile.dev]
#build-std = ["unstable"]
#panic = "abort"

#[profile.release]
#build-std = ["unstable"]
#panic = "abort"

#->moved to OStt json